--- a/libra/templates/search.html
+++ b/libra/templates/search.html
@@ -15,10 +15,10 @@
 			<p>Brand : {{ product.brand }} </p>
 			<p>Image Url : {{ product.imgurl }} </p> -->
 
-
-			<center><a href="{{ product.url }}"><h1>{{ product.id }} - {{ product.title }} </h1></a>
+			<img src="{{ product.imgurl }}" width="200px" height="200px" style="float:left">
+			<center><a href="/compare/?title={{product.title}}&price={{product.sp}}"><h1>{{ product.id }} - {{ product.title }} </h1></a>
 			<h2>{{ product.brand }}  <br> {{ product.category }}</h2>
-			<h3>{{ product.mrp }}X  &nbsp;&nbsp; SP : {{ product.sp }} </h3></center>
+			<h3>MRP: {{ product.mrp }}X  &nbsp;&nbsp; SP : {{ product.sp }} </h3></center>
 		<br><br><hr><br><br>
 	{% endfor %}
 
