--- a/libra/templates/compare.html
+++ b/libra/templates/compare.html
@@ -7,10 +7,10 @@
 
 	{% for product in allprods %}
 
-			<img src="{{ product.imgurl }}" width="200px" height="200px" style="float:left">
+			<img src="{{ product.imgurl }}" height="200px" style="float:left">
 			<center><a href="/compare/?title={{product.title}}"><h1>{{ product.title }} </h1></a>
-			<h3>Price : {{ product.price }} </h3></center>
-			<h4>Rating : {{ product.rating }}</h4>
+			<h3>Price : {{ product.price }} </h3>
+			<h4>Rating : {{ product.rating }}</h4></center>
 		<br><br><hr><br><br>
 	{% endfor %}
 
