--- a/libra/templates/index.html
+++ b/libra/templates/index.html
@@ -5,12 +5,57 @@
 </head>
 <body>
 
-	<h1>Welcome to libra</h1>
+	<center><h1>Welcome to Aggregator !</h1>
 
 	<form method="get" action="/search/">
-		<input type="text" name="search" placeholder="Search here">
-		<input type="submit" name="submit">
+		<input type="text" name="search" placeholder="Search here"><br>
+		<input type="submit" name="submit"></center>
 	</form>
+
+	<style type="text/css">
+
+		body
+		{
+			font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+			background-color: aqua;
+			background-size: cover;
+		}
+
+		h1
+		{
+			margin-top: 20%;
+			color: red;
+			font-size: 50px;
+		}
+
+		input[type="text"]
+		{
+			margin-top: 2%;
+			height: 20px;
+			width: 150px;
+			font-size: 15px;
+			border: 1px solid brown;
+			text-align: center;
+		}
+
+		input[type="text"]:focus
+		{
+			margin-top: 2%;
+			height: 20px;
+			width: 150px;
+			font-size: 15px;
+			border: 2px solid brown;
+		}
+
+		input[type="submit"]
+		{
+			margin-top: 1%;
+			height: 20px;
+			width: 50px;
+			font-size: 15px;
+		}
+
+	</style>
 
 </body>
 </html>
