--- a/libra/templates/search.html
+++ b/libra/templates/search.html
@@ -16,10 +16,14 @@
 			<p>Image Url : {{ product.imgurl }} </p> -->
 
 			<img src="{{ product.imgurl }}" width="200px" height="200px" style="float:left">
-			<center><a href="/compare/?title={{product.title}}&price={{product.sp}}"><h1>{{ product.title }} </h1></a>
+			<center><a href="/compare/{{product.id}}"><h1>{{ product.title }} </h1></a>
 			<h2>{{ product.brand }}  <br> {{ product.category }}</h2>
 			<h3>MRP: {{ product.mrp }}X  &nbsp;&nbsp; SP : {{ product.sp }} </h3></center>
 		<br><br><hr><br><br>
+	{% endfor %}
+
+	{% for product in allprods %}
+	<p>{{ product.brand }}</p>
 	{% endfor %}
 
 </body>
