--- a/libra/templates/index.html
+++ b/libra/templates/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
 
 	<center><h1>Welcome to Aggregator !</h1>
 
@@ -12,50 +9,49 @@
 		<input type="submit" name="submit"></center>
 	</form>
 
-	<style type="text/css">
+{% endblock %}
 
-		body
-		{
-			font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
-			background-color: aqua;
-			background-size: cover;
-		}
+<style type="text/css">
 
-		h1
-		{
-			margin-top: 20%;
-			color: red;
-			font-size: 50px;
-		}
+	body
+	{
+		font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+		background-color: aqua;
+		background-size: cover;
+	}
 
-		input[type="text"]
-		{
-			margin-top: 2%;
-			height: 20px;
-			width: 150px;
-			font-size: 15px;
-			border: 1px solid brown;
-			text-align: center;
-		}
+	h1
+	{
+		margin-top: 20%;
+		color: red;
+		font-size: 50px;
+	}
 
-		input[type="text"]:focus
-		{
-			margin-top: 2%;
-			height: 20px;
-			width: 150px;
-			font-size: 15px;
-			border: 2px solid brown;
-		}
+	input[type="text"]
+	{
+		margin-top: 2%;
+		height: 20px;
+		width: 150px;
+		font-size: 15px;
+		border: 1px solid brown;
+		text-align: center;
+	}
 
-		input[type="submit"]
-		{
-			margin-top: 1%;
-			height: 20px;
-			width: 50px;
-			font-size: 15px;
-		}
+	input[type="text"]:focus
+	{
+		margin-top: 2%;
+		height: 20px;
+		width: 150px;
+		font-size: 15px;
+		border: 2px solid brown;
+	}
 
-	</style>
+	input[type="submit"]
+	{
+		margin-top: 1%;
+		height: 20px;
+		width: 50px;
+		font-size: 15px;
+	}
 
-</body>
-</html>
+</style>
