--- a/libra/templates/base.html
+++ b/libra/templates/base.html
@@ -3,23 +3,52 @@
 
 	<head>
 
-		<!--Import Google Icon Font-->
+		{% block title %}
+      		{% endblock %}
+
+      		<!--Import Google Icon Font-->
 	      	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	      	<!--Import materialize.css-->
-	      	<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	      	 <link rel="stylesheet" type="text/css" href="http://localhost/aggregator/materialize/css/materialize.css">
 	      	<!--Let browser know website is optimized for mobile-->
       		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      		<!--Import jQuery before materialize.js-->
+      		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      		<script type="text/javascript" src="http://localhost/aggregator/materialize/js/materialize.js"></script>
+
+      		{% block head_extras %}
+      		{% endblock %}
 
 	</head>
 
 	<body>
 
+		<nav>
+		    	<div class="nav-wrapper">
+		      		<form id="searchbar" action="/search/" method="get">
+		        		<div class="input-field col l8 s8 push-s2">
+		          			<input type="search" class="center-align" placeholder="What are we looking for today??" name="search" required>
+		          			<label for="search"><i class="material-icons">search</i><input style="visibility:hidden" type="submit" value="Search" name="submit"></label>
+		          			<i class="material-icons">close</i>
+		        		</div>
+		      		</form>
+		    	</div>
+		</nav>
+
 		{% block body %}
 		{% endblock %}
 
-		<!--Import jQuery before materialize.js-->
-      		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<style type="text/css">
+
+			nav
+			{
+				margin-top: 50px;
+				margin-bottom: 50px;
+				width: 60% !important;
+				margin-left: 20%;
+			}
+
+		</style>
 
 	</body>
 
