--- a/libra/templates/sort.html
+++ b/libra/templates/sort.html
@@ -1,31 +1,114 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Flipkart Initial Links</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-	{% for product in allprods %}
 
-			<img src="{{ product.imgurl }}" width="200px" height="200px" style="float:left">
-			<center><a href="/compare/{{product.id}}"><h1>{{ product.title }} </h1></a>
-			<h2>{{ product.brand }}  <br> {{ product.category }}</h2>
-			<h3>MRP: {{ product.mrp }}X  &nbsp;&nbsp; SP : {{ product.sp }} </h3></center>
-			<br><br><hr><br><br>
+{% block title %} <title>Libra | search</title> {% endblock %}
 
-	{% endfor %}
+{% block head_extras %}
 
-	<form action="filter">
-		{% for brand in brands %}
-			<input type="checkbox" name="brand" value="{{ brand }}"> {{ brand }}<br>
-		{% endfor %}
-		<p>Min Price : {{ min_price }}</p>
-		<p>Max Price : {{ max_price }}</p>
-	</form>
+	<link rel="stylesheet" type="text/css" href="http://localhost/aggregator/css/search.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost/aggregator/side_menu/css/style.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost/aggregator/side_menu/css/reset.css">
+	<script type="text/javascript" src="http://localhost/aggregator/side_menu/js/main.js"></script>
+	<script type="text/javascript" src="http://localhost/aggregator/side_menu/js/modernizr.js"></script>
 
-	<a href="/search/sort/relevance">Sort by relevance</a> <br>
-	<a href="/search/sort/lowtohigh">Sort by price (low to high)</a> <br>
-	<a href="/search/sort/hightolow">Sort by price (high to low)</a> <br>
+{% endblock %}
 
-</body>
-</html>
+{% block body %}
+
+	<main class="cd-main-content">
+		<div class="cd-tab-filter-wrapper">
+			<div class="cd-tab-filter">
+				<ul class="cd-filters" style="z:index:10000">
+					<li class="placeholder">
+						<a data-type="all" href="#0">All</a> <!-- selected option on mobile -->
+					</li>
+					{% if method == "relevance" %}
+						<li class="filter"><a id="relid" class="selected" href="/search/sort/relevance" data-type="all"><b>Relevance</b></a></li>
+					{% else %}
+						<li class="filter"><a id="relid" href="/search/sort/relevance" data-type="all"><b>Relevance</b></a></li>
+					{% endif %}
+					{% if method == "lowtohigh" %}
+						<li class="filter" data-filter=".color-1"><a class="selected" id="prltoh" href="/search/sort/lowtohigh" data-type="color-1"><b>Price low - high</b></a></li>
+					{% else %}
+						<li class="filter" data-filter=".color-1"><a id="prltoh" href="/search/sort/lowtohigh" data-type="color-1"><b>Price low - high</b></a></li>
+					{% endif %}
+					{% if method == "hightolow" %}
+						<li class="filter" data-filter=".color-2"><a class="selected" id="prhtol" href="/search/sort/hightolow" data-type="color-2"><b>Price high - low</b></a></li>
+					{% else %}
+						<li class="filter" data-filter=".color-2"><a id="prhtol" href="/search/sort/hightolow" data-type="color-2"><b>Price high - low</b></a></li>
+					{% endif %}
+				</ul> <!-- cd-filters -->
+			</div> <!-- cd-tab-filter -->
+		</div> <!-- cd-tab-filter-wrapper -->
+
+		<section class="cd-gallery">
+
+			<div id="allcards">
+
+				<div class="row">
+
+					{% for product in allprods %}
+
+						<div class="col l3 m6 s12">
+							<div class="card medium hoverable">
+								<div class="card-image waves-effect waves-block waves-light">
+									<img class="activator" src="{{ product.imgurl }}" class="">
+								</div>
+								<div class="right-content">
+									<h5 class="card-title activator grey-text text-darken-4 valign center-align">{{ product.title }}</h5>
+									<div class="card-content">
+										<p>By <span class="center-align">{{ product.brand }}</span></p>
+										<p>Price : <span class="center-align">{{ product.sp }}</span></p>
+									</div>
+									<div class="card-action">
+										<a href="/compare/{{product.id}}"><span class="center-align">Compare</span></a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					{% endfor %}
+
+				</div>
+
+			</div>
+
+			<div class="cd-filter">
+				<div id="brandsfilter">
+
+					<form action="/search/filter">
+
+						<h4><i class="material-icons prefix"> list </i> Brands</h4>
+
+						{% for brand in brands %}
+							<p>
+								<input type="checkbox" name="{{ brand }}" id="idbrand{{ forloop.counter }}" checked="checked" />
+								<label name="labelbrand{{ forloop.counter }}" for="idbrand{{ forloop.counter }}" value="{{ brand }}"> {{ brand }} </label>
+							</p>
+						{% endfor %}
+
+						<!-- <h4><i class="material-icons prefix"> code </i> Price</h4>
+						<h6>(Select the upper price limit)</h6>
+			    			<p class="range-field">
+						      	<input type="range" id="test005" min="{{ min_price }}" max="{{ max_price }}" value="{{ max_price }}" />
+						</p> -->
+
+						<button class="btn waves-effect waves-light" type="submit" id="action">Filter
+							<i class="material-icons right">send</i>
+					  	</button>
+
+					</form>
+
+				</div>
+
+				<a href="#0" class="cd-close">Close</a>
+
+			</div> <!-- cd-filter -->
+
+		</section>
+
+		<a href="#0" class="cd-filter-trigger">Filters</a>
+
+	</main> <!-- cd-main-content -->
+
+{% endblock %}
