styling and price filtering implemented

--- a/libra/templates/index.html
+++ b/libra/templates/index.html
@@ -4,14 +4,9 @@
 
 {% block body %}
 
-	<center><h1>Welcome to Aggregator !</h1></center>
+	<!-- <center><h1>Welcome to Aggregator !</h1></center> -->
 
-	<!-- <form method="get" action="/search/">
-		<input type="text" name="search" placeholder="Search here"><br>
-		<input type="submit" name="submit"></center>
-	</form> -->
-
-	<nav>
+	<!-- <nav>
 	    	<div class="nav-wrapper">
 	      		<form id="searchbar" action="/search/" method="get">
 	        		<div class="input-field col l8 s8 push-s2">
@@ -21,6 +16,16 @@
 	        		</div>
 	      		</form>
 	    	</div>
-	</nav>
+	</nav> -->
+
+	<style type="text/css">
+
+	.homehighlighted
+	{
+		color:white;
+		background-color:#006b75;
+	}
+
+	</style>
 
 {% endblock %}
