--- a/libra/templates/base.html
+++ b/libra/templates/base.html
@@ -15,6 +15,7 @@
       		<!--Import jQuery before materialize.js-->
       		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       		<script type="text/javascript" src="http://localhost/aggregator/materialize/js/materialize.js"></script>
+      		<script type="text/javascript" src="http://localhost/aggregator/js/mobiledropdown.js"></script>
 
       		{% block head_extras %}
       		{% endblock %}
@@ -23,7 +24,47 @@
 
 	<body>
 
-		<nav>
+		<header class="z-depth-1">
+			<div class="navbar-fixed">
+
+				<nav>
+			      		<div class="nav-wrapper">
+
+			       	 		<a href="/index/" class="brand-logo"><img src=>&nbsp <img src="http://localhost/aggregator/img/libra.png" style="height:65px; float:left; padding-left:30px;"/>Libra</a>
+			        			<a href="/index/" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">&nbsp menu</i></a>
+
+						<ul class="right hide-on-med-and-down">
+				 		  	<li style="margin-right:50px;">
+				         	  	   		<div class="nav-wrapper">
+							      		<form id="searchbar" action="/search/" method="get">
+							        		<div class="input-field col l8 s8 push-s2">
+							          			<input style="width:550px" type="search" placeholder="Search for a product..." name="search" required>
+							          			<label for="search"><i class="material-icons">search</i><input style="visibility:hidden" type="submit" value="Search" name="submit"></label>
+							          			<i class="material-icons">close</i>
+							        		</div>
+							      		</form>
+							    	</div>
+		 				   	</li>
+						  	{% block home_block %}
+						  		<li><a class="homehighlighted" href="/index/">&nbsp&nbsp&nbsp&nbsp HOME &nbsp&nbsp&nbsp&nbsp</a></li>
+						  	{% endblock %}
+				          			<li><a class="dealshighlighted" href="/deals/">&nbsp&nbsp&nbsp&nbsp LATEST DEALS&nbsp;&nbsp&nbsp&nbsp</a></li>
+				          			<li><a class="abouthighlighted" href="/help/">&nbsp&nbsp&nbsp&nbsp HELP &nbsp&nbsp&nbsp&nbsp</a></li>
+			        			</ul>
+						<ul class="side-nav" id="mobile-demo">
+				          			<li><a href="sass.html">SEARCH</a></li>
+				          			<li><a href="sass.html">HOME</a></li>
+				          			<li><a href="badges.html">LATEST DEALS</a></li>
+				         	 		<li><a href="collapsible.html">HELP</a></li>
+			      			</ul>
+
+			      		</div>
+				</nav>
+
+			</div>
+		</header>
+
+		<!-- <nav>
 		    	<div class="nav-wrapper">
 		      		<form id="searchbar" action="/search/" method="get">
 		        		<div class="input-field col l8 s8 push-s2">
@@ -33,19 +74,22 @@
 		        		</div>
 		      		</form>
 		    	</div>
-		</nav>
+		</nav> -->
 
 		{% block body %}
 		{% endblock %}
 
 		<style type="text/css">
 
+			body
+			{
+				font-family: Century Gothic;
+				background-color: #a1e3e9;
+			}
+
 			nav
 			{
-				margin-top: 50px;
-				margin-bottom: 50px;
-				width: 60% !important;
-				margin-left: 20%;
+				background-color: #009caa !important;
 			}
 
 		</style>
