--- a/libra/templates/compare.html
+++ b/libra/templates/compare.html
@@ -4,30 +4,118 @@
 
 {% block body %}
 
-	{% for product in allprods %}
+	<div class="container">
 
-		{% if product.url %}
+		<div class="outer_box"><img class="inner_img" src="{{ imageurl }}" width="200px"></div>
+		<h4> {{ title }} </h4>
+		<p> Product description : {% if desc %} {{ desc }} {% else %} NA {% endif %} </p>
 
-			<img src="{{ product.imgurl }}" height="200px" style="float:left">
-			<center><h3 style="color:red">Product from {{product.server}}</h3>
-			<a href="{{product.url}}"><h3>{{ product.title }} </h3></a>
-			<h4>Price : {{ product.price }} </h4>
-			<h5>Rating : {{ product.rating }}</h5></center>
+		<!-- {% for product in allprods %}
 
-		{% else %}
+			{% if product.url %}
 
-			<img src="http://www.oolongpuerhtea.com/public/images/no_product_img.jpg" height="200px" style="float:left">
-			<center><h3 style="color:red">Not available on
-								{% if forloop.counter == 1 %} Flipkart {% endif %}
-								{% if forloop.counter == 2 %} Amazon {% endif %}
-								{% if forloop.counter == 3 %} Snapdeal {% endif %}
-								{% if forloop.counter == 4 %} Ebay {% endif %}
-				</h3></center>
+				<img src="{{ product.imgurl }}" height="200px" style="float:left">
+				<center><h3 style="color:red">Product from {{product.server}}</h3>
+				<a target="_blank" href="{{product.url}}"><h3>{{ product.title }} </h3></a>
+				<h4>Price : {{ product.price }} </h4>
+				<h5>Rating : {{ product.rating }}</h5></center>
 
-		{% endif %}
+			{% else %}
 
-		<br><br><hr><br><br>
+				<img src="http://www.oolongpuerhtea.com/public/images/no_product_img.jpg" height="200px" style="float:left">
+				<center><h3 style="color:red">Not available on
+									{% if forloop.counter == 1 %} Flipkart {% endif %}
+									{% if forloop.counter == 2 %} Amazon {% endif %}
+									{% if forloop.counter == 3 %} Snapdeal {% endif %}
+									{% if forloop.counter == 4 %} Ebay {% endif %}
+					</h3></center>
 
-	{% endfor %}
+			{% endif %}
+
+		{% endfor %} -->
+
+		<table class="centered responsive-table">
+		        	<thead>
+		          		<tr>
+		              		<th data-field="flipkart"><img width="200px" src="http://localhost/aggregator/img/flipkart.png"></th>
+		              		<th data-field="amazon"><img width="200px" src="http://localhost/aggregator/img/amazon.png"></th>
+		              		<th data-field="snapdeal"><img width="200px" src="http://localhost/aggregator/img/snapdeal.png"></th>
+		              		<th data-field="ebay"><img width="200px" src="http://localhost/aggregator/img/ebay.png"></th>
+		          		</tr>
+		        	</thead>
+
+		        	<tbody>
+
+		        		<tr>
+
+		          			{% for product in allprods %}
+
+		          				<td style="width:25%">
+
+			          				{% if product.url %}
+
+								<p>Price : {{ product.price }} </p>
+								<p>Rating : {{ product.rating }}</p>
+								<a target="_blank" href="{{product.url}}"><p>Get this deal! </p></a>
+
+							{% else %}
+
+								<p>NA</p>
+								<p>NA</p>
+								<p>NA</p>
+
+							{% endif %}
+
+						</td>
+
+		          			{% endfor %}
+
+		          		</tr>
+
+		        	</tbody>
+	      	</table>
+
+	</div>
+
+      	<style type="text/css">
+
+      		body
+      		{
+      			background-color: white !important;
+      		}
+
+      		.outer_box
+      		{
+      			background-color: white !important;
+      			width: 220px;
+      			margin-left: 50px;
+      			margin-top: 20px;
+      			float: left;
+      			margin-bottom: 100px;
+      		}
+
+      		.inner_img
+      		{
+      			width: 200px;
+      			float: left;
+      			padding-right: 20px;
+      		}
+
+      		p
+      		{
+      			font-size: 20px;
+      			font-weight: light;
+      			padding-left: 50px;
+      			margin-top: 20px;
+      		}
+
+      		h4
+      		{
+      			color: #006b75;
+      			padding-left: 50px;
+      			margin-top: 50px;
+      		}
+
+      	</style>
 
 {% endblock %}
