delivery time scraping implemented

--- a/libra/templates/base.html
+++ b/libra/templates/base.html
@@ -52,10 +52,10 @@
 				          			<li><a class="abouthighlighted" href="/help/">&nbsp&nbsp&nbsp&nbsp HELP &nbsp&nbsp&nbsp&nbsp</a></li>
 			        			</ul>
 						<ul class="side-nav" id="mobile-demo">
-				          			<li><a href="sass.html">SEARCH</a></li>
-				          			<li><a href="sass.html">HOME</a></li>
-				          			<li><a href="badges.html">LATEST DEALS</a></li>
-				         	 		<li><a href="collapsible.html">HELP</a></li>
+				          			<li><a href="/mobsearch/">SEARCH</a></li>
+				          			<li><a href="/index/">HOME</a></li>
+				          			<li><a href="/deals/">LATEST DEALS</a></li>
+				         	 		<li><a href="/help/">HELP</a></li>
 			      			</ul>
 
 			      		</div>
